--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 3060",
-    "build": "next build"
+    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
+    "start": "cross-env NODE_ENV=production next start -p 3060"
   },
   "author": "hanae",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "cross-env": "^7.0.3",
     "faker": "^5.4.0",
     "immer": "^8.0.1",
     "moment": "^2.29.1",
