--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cocm",
+  "name": "hanae",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next -p 3060"
   },
   "author": "DAHYE HAN",
   "license": "ISC",
